Added Main Page

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,4 +6,6 @@ spring.data.mongodb.port = 27017
 spring.data.mongodb.database = ApplicationDB
 
 # Hot swapping templates
-spring.thymeleaf.cache = false
+spring.thymeleaf.cache=false
+spring.thymeleaf.mode=LEGACYHTML5
+spring.thymeleaf.templates_root=src/main/resources/templates/
