Made promotion events unique to each rep.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,6 @@
-server.port = 3000
+server.port=3000
 server.error.whitelabel.enabled=true
-
-spring.data.mongodb.host = localhost
-spring.data.mongodb.port = 27017
-spring.data.mongodb.database = ApplicationDB
-
+spring.data.mongodb.uri=mongodb+srv://User:OK66BZ5hjHMzZKFB@smallcluster.ylybf.mongodb.net/AplicationDB
 # Hot swapping templates
 spring.thymeleaf.cache=false
 spring.thymeleaf.mode=LEGACYHTML5
