Custom Exception handler

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=3000
-server.error.whitelabel.enabled=true
+server.error.whitelabel.enabled=false
 spring.data.mongodb.uri=mongodb+srv://User:OK66BZ5hjHMzZKFB@smallcluster.ylybf.mongodb.net/AplicationDB
 
 # Hot swapping templates
