--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,8 @@ server.port=3000
 server.error.whitelabel.enabled=false
 spring.data.mongodb.uri=mongodb+srv://User:OK66BZ5hjHMzZKFB@smallcluster.ylybf.mongodb.net/AplicationDB
 
+# spring.data.mongodb.uri=mongodb://localhost:27017/ApplicationDB
+
 # Hot swapping templates
 spring.thymeleaf.cache=false
 spring.thymeleaf.mode=LEGACYHTML5
